updated book details page

--- a/client/views/books.html
+++ b/client/views/books.html
@@ -10,7 +10,7 @@
               
               <h4>{{book.title}}</h4>
               <p>{{book.description}}</p>
-              <a class="btn btn-primary" href="#/books/details/{{book._id}}">View Details</a>
+              <a class="btn btn-primary" href="#!/details/{{book._id}}">View Details</a>
             </div>
             <div class="col-md-6">
               
